Fixes the navbar on top and avoids overlap.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   body {
     background-color: rgb(235,235,235);
     color: rgb(30,30,30);
+    padding-top: 75px;
   }
   @media (prefers-color-scheme: dark) {
     body {
@@ -80,6 +81,11 @@
     padding: 15px;
     height: 75px;
     gap: clamp(15px, 5vw, 100px);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
+    background-color: rgb(235,235,235);
   }
   .navlink {
     text-decoration: none;
@@ -444,7 +450,6 @@
     height: 400px;
     padding: 25px;
     gap: 3em;
-    margin-bottom: 150px;
   }
   .how-crypto-image {
     display: flex;
